# quadruped_robot

./: README.txt
1_std_lib_f4/LIB/FreeRTOS_Lib/: FreeRTOSConfig.h
1_std_lib_f4/LIB/IMU_Lib/DMP/: MPU6050.c  MPU6050_6Axis_MotionApps20.c
1_std_lib_f4/LIB/IMU_Lib/I2C/: I2Cdev.c  I2Cdev.h
1_std_lib_f4/LIB/PS2_Lib/: PS2_Ctrl.h  PS2_ctrl.c
1_std_lib_f4/USER/: FreeRTOSConfig.h  main.c  main.h  quad.uvguix.Nguyen  quad.uvguix.fshar  quad.uvoptx  quad.uvprojx  stm32f4xx.h  stm32f4xx_it.c
1_std_lib_f4/USER/Listings/: quad.map  startup_stm32f40_41xxx.lst
1_std_lib_f4/USER/RTE/_Target_1/: RTE_Components.h
1_std_lib_f4/USER/RTE/_quad/: RTE_Components.h
STL_files_quad/: CHUL_x4.STL
STL_files_quad/BODY/: XN_upper_back_2.STL  lower.STL
STL_files_quad/TIBIA/: TPU_contact_x8.STL  inner_tibia_m_x2.STL  inner_tibia_x2.STL  outer_tibia_m_x2.STL  outer_tibia_x2.STL
quadruped_sim/: kill.bash  run.bash
quadruped_sim/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
quadruped_sim/devel/lib/pkgconfig/: before_start_everything.pc  quadruped_controller.pc  quadruped_keyboard.pc  quadruped_uart_rx.pc  quadruped_uart_tx.pc
quadruped_sim/devel/lib/quadruped_controller/: robot_controller_gazebo
quadruped_sim/devel/lib/quadruped_keyboard/: ramped_keyboard
quadruped_sim/devel/lib/quadruped_uart_rx/: uart_rx
quadruped_sim/devel/lib/quadruped_uart_tx/: uart_tx
quadruped_sim/devel/share/before_start_everything/cmake/: before_start_everythingConfig.cmake
quadruped_sim/devel/share/quadruped_controller/cmake/: quadruped_controllerConfig.cmake
quadruped_sim/devel/share/quadruped_keyboard/cmake/: quadruped_keyboardConfig.cmake
quadruped_sim/devel/share/quadruped_uart_rx/cmake/: quadruped_uart_rxConfig.cmake
quadruped_sim/devel/share/quadruped_uart_tx/cmake/: quadruped_uart_txConfig.cmake
quadruped_sim/src/before_start_everything/: CMakeLists.txt  package.xml
quadruped_sim/src/before_start_everything/launch/: bse.launch  get_usb.sh
quadruped_sim/src/quadruped/: CMakeLists.txt  package.xml
quadruped_sim/src/quadruped/launch/: before.launch  quadruped.sh  run_robot_all.launch  run_robot_controller.launch  run_robot_gazebo.launch  run_robot_uart_rx.launch  run_robot_uart_tx.launch
quadruped_sim/src/quadruped_controller/: CMakeLists.txt  package.xml
quadruped_sim/src/quadruped_controller/include/quadruped_controller/: GaitController.hpp  InverseKinematics.hpp  RobotController.hpp  StateCommand.hpp  Transformations.hpp  (+1 more)
quadruped_sim/src/quadruped_controller/launch/: robot_controller.launch
quadruped_sim/src/quadruped_controller/src/: main.cpp
quadruped_sim/src/quadruped_description/: CMakeLists.txt  package.xml
quadruped_sim/src/quadruped_description/urdf/: quadruped.urdf
quadruped_sim/src/quadruped_gazebo/: CMakeLists.txt  package.xml
quadruped_sim/src/quadruped_gazebo/config/: controllers.yaml
quadruped_sim/src/quadruped_gazebo/launch/: simulation.launch
quadruped_sim/src/quadruped_gazebo/launch/world/: normal.world
quadruped_sim/src/quadruped_keyboard/: CMakeLists.txt  package.xml
quadruped_sim/src/quadruped_keyboard/include/: main.hpp
quadruped_sim/src/quadruped_keyboard/launch/: ramped_keyboard.launch
quadruped_sim/src/quadruped_keyboard/src/: main.cpp
quadruped_sim/src/quadruped_uart_rx/: CMakeLists.txt  package.xml
quadruped_sim/src/quadruped_uart_rx/include/: main.hpp
quadruped_sim/src/quadruped_uart_rx/launch/: uart_rx.launch
quadruped_sim/src/quadruped_uart_rx/src/: main.cpp
quadruped_sim/src/quadruped_uart_tx/: CMakeLists.txt  package.xml
quadruped_sim/src/quadruped_uart_tx/include/: main.hpp
quadruped_sim/src/quadruped_uart_tx/launch/: uart_tx.launch
quadruped_sim/src/quadruped_uart_tx/src/: main.cpp
(+6 files in other folders)
