<?xml version="1.0"?>
<package format="2">
  <name>quadruped_gazebo</name>
  <version>1.0.0</version>
  <description>The quadruped_gazebo package</description>

  <maintainer email="nguyenvdx@gmail.com">nguyenvdx</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
