<?xml version="1.0"?>
<package format="2">
  <name>quadruped_keyboard</name>
  <version>1.0.0</version>
  <description>The quadruped_keyboard package</description>

  <maintainer email="nguyenvdx@gmail.com">nguyenvdx</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
